--- a/1html.css
+++ b/1html.css
@@ -1,5 +1,7 @@
 * {
     box-sizing: border-box;
+    background-color: rgb(55, 65, 81, 1);
+    color: aliceblue;
 }
 
 .menu {
@@ -29,10 +31,7 @@
 }
 .menu_inner a:link {
     text-decoration: none;
-    color: black;
-}
-.menu_inner a:link:hover {
-    background-color: red;
+    color: aliceblue;
 }
 
 .menu_search {
@@ -44,13 +43,13 @@
 .menu_search input {
     border-radius: 10px;
     padding: 0 5px;
+    border: 2px solid;
 }
 
 
 .text {
     width: 1170px;
     margin: 0 auto;
-    border: 4px solid black;
 }
 
 .text_conteiner {
