--- a/1 html/1html.css
+++ b/1 html/1html.css
@@ -8,6 +8,11 @@
     width: 1174px;
     margin: 0 auto;
 }
+nav .conteiner {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
 
 .conteiner {
     width: 1170px;
@@ -45,12 +50,10 @@
     width: 1170px;
     margin: 0 auto;
 }
-
-.text {
+main .conteiner {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 1164px;
 }
 
 .textstart_inner {
