--- a/1html/index.css
+++ b/1html/index.css
@@ -1,20 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
     box-sizing: border-box;
-    background-color: rgb(55, 65, 81, 1);
     color: aliceblue;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+body {
+    background-color: rgb(55, 65, 81, 1);
 }
 
 .menu {
     width: 1174px;
     margin: 0 auto;
 }
-nav .conteiner {
+nav .container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 }
 
-.conteiner {
+.container {
     width: 1170px;
     margin: 0 auto;
 }
@@ -23,26 +31,28 @@ nav .conteiner {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    gap: 2em;
 }
 .menu_inner li {
     list-style: none;
-    padding: 0 25px;
 }
 .menu_inner a:link {
     text-decoration: none;
     color: aliceblue;
 }
 
-.menu_search {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 10px;
-}
+
 .menu_search input {
     border-radius: 10px;
-    padding: 0 5px;
-    border: 2px solid;
+    border: none;
+    background-color: #1F293799;
+    max-width: 230px;
+}
+#searchid {
+    padding: 9px 12px;
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: 400;
 }
 
 
@@ -50,7 +60,7 @@ nav .conteiner {
     width: 1170px;
     margin: 0 auto;
 }
-main .conteiner {
+main .container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -82,7 +92,6 @@ main .conteiner {
     font-size: 30px;
     text-align: center;
     line-height: 40px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
     padding: 10px 0;
     margin-bottom: 30px;
 }
@@ -136,4 +145,13 @@ main .conteiner {
 }
 .textend p a:link {
     text-decoration: none;
+}
+
+@media (max-width: 768px) {
+    .menu_inner {
+        flex-direction: column;
+    }
+    .text {
+        flex-direction: column;
+    }
 }
