--- a/2forms/index.css
+++ b/2forms/index.css
@@ -10,19 +10,18 @@ body {
 
 .register {
     border: 4px solid white;
-    margin: 110px auto;
-    width: 582px;
+    max-width: 582px;
     height: 573px;
     background-color: white;
     border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 120px auto;
 }
 
 .register_conteiner {
     margin: 0 auto;
-    margin: 70px;
-}
-
-.register_flex {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -43,7 +42,7 @@ body {
     background-color: #F5F5F5;
 }
 .register h2 {
-    font-family: 700;
+    font-weight: 700;
     font-size: 35px;
 }
 .register p {
@@ -54,31 +53,22 @@ body {
     margin: 25px 0;
 }
 
-#t1 {
+#t1, #t2, #t3 {
     padding: 10px;
     font-style: italic;
-    background-color:#F5F5F5;
+    background-color: #F5F5F5;
     border-radius: 5px;
-    width: 205px;
 }
-#t2 {
-    padding: 10px;
-    font-style: italic;
-    background-color:#F5F5F5;
-    border-radius: 5px;
+#t1, #t2 {
     width: 205px;
 }
 #t3 {
-    padding: 10px;
-    font-style: italic;
-    background-color:#F5F5F5;
-    border-radius: 5px;
-    width: 415px;
+    width: 405px;
 }
 
 .register_buttom {
     display: flex;
-    justify-content:space-around;
+    justify-content:space-evenly;
     align-items: center;
     background-color: #089FE0;
     border-radius: 5px;
@@ -89,7 +79,10 @@ body {
     text-decoration: none;
     font-size: 20px;
 }
-.register_buttom img {
-    width: 50px;
-    height: 50px;
+
+@media (max-width: 768px) {
+    .register {
+        width: 90%;
+        height: auto;
+    }
 }
