--- a/final/src/css/style.css
+++ b/final/src/css/style.css
@@ -101,8 +101,11 @@
 
 .second-section {
   background-color: #FFFFFF;
+  overflow: hidden;
 }
-
+.second-section__functions {
+  margin-bottom: 144px;
+}
 .functions__flex {
   display: flex;
   justify-content: space-between;
@@ -128,4 +131,30 @@
 .functions_items {
   font-size: 24px;
   font-weight: 700;
+}
+
+.cash-gaps {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cash-gaps__left {
+  text-align: left;
+}
+.cash-gaps__left__h3 {
+  font-size: 50px;
+  font-weight: 600;
+  color: #000000;
+  margin-bottom: 24px;
+  width: 510px;
+}
+.cash-gaps__left__p {
+  font-size: 18px;
+  font-weight: 500;
+  color: rgba(78, 93, 124, 0.5019607843);
+  width: 482px;
+}
+.cash-gaps__right__img {
+  width: 729px;
 }/*# sourceMappingURL=style.css.map */
