--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -77,7 +77,7 @@ $color-for-statistics: #4E5D7C80
         z-index: 1
     &__inside
         position: absolute
-        right: 385px
+        right: 164px
         top: 230px
         z-index: 1
     &__reg
@@ -96,7 +96,9 @@ $color-for-statistics: #4E5D7C80
     &__functions
         margin-bottom: 144px
     &__statistics
-        
+        margin-bottom: 80px
+        &:last-child
+            margin: 0px
 
 .functions__flex
     display: flex
@@ -120,26 +122,104 @@ $color-for-statistics: #4E5D7C80
         font-weight: 700
 
 .cash-gaps
-    position: relative
     display: flex
     justify-content: center
     align-items: center
     &__left
         text-align: left
         &__h3
-            font-size: 50px
+            font-size: 40px
             font-weight: 600
             color: #000000
             margin-bottom: 24px
             width: 510px
+            line-height: 120%
         &__p
             font-size: 18px
             font-weight: 500
             color: $color-for-statistics
             width: 482px
+            line-height: 120%
     &__right
-        
         &__img
             width: 729px
 
-    
+.reports
+    display: flex
+    justify-content: center
+    align-items: center
+    gap: 40px
+    &__left
+        &__img
+            width: 644px
+    &__right
+        text-align: left
+        &__h3
+            font-size: 40px
+            font-weight: 600
+            color: #000000
+            margin-bottom: 24px
+            width: 571px
+            line-height: 120%
+        &__p
+            font-size: 18px
+            font-weight: 500
+            color: $color-for-statistics
+            width: 565px
+            line-height: 140%
+
+.profit
+    display: flex
+    justify-content: center
+    align-items: center
+    gap: 28px
+    &__left
+        text-align: left
+        &__h3
+            font-size: 40px
+            font-weight: 600
+            color: #000000
+            margin-bottom: 29px
+            width: 566px
+            line-height: 120%
+        &__p
+            font-size: 18px
+            font-weight: 500
+            color: $color-for-statistics
+            width: 526px
+            line-height: 140%
+
+.expenses
+    display: flex
+    justify-content: center
+    align-items: center
+    gap: 247px
+    &__left
+        position: relative
+        &__img-big
+            width: 461px
+        &__img-small
+            position: absolute
+            width: 450px
+            left: 170px
+            bottom: 145px
+    &__right
+        text-align: left
+        &__h3
+            font-size: 40px
+            font-weight: 600
+            color: #000000
+            margin-bottom: 30px
+            width: 566px
+            line-height: 120%
+        &__p
+            font-size: 18px
+            font-weight: 500
+            color: $color-for-statistics
+            width: 566px
+            line-height: 140%
+
+.basic-statistics__hr
+    margin: 0px
+    margin-bottom: 80px
+    color: $color-for-statistics
