--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -224,4 +224,60 @@ $color-for-statistics: #4E5D7C80
     margin-bottom: 80px
     color: $color-for-statistics
 
-.
+.third-section
+    background-color: $color-blue
+
+.time-saving__upper-level
+    padding-top: 120px 
+    text-align: center
+    &__h3
+        color: rgb(255, 255, 255)
+        font-size: 48px
+        font-weight: 600
+        line-height: 120%
+        margin-bottom: 24px
+    &__p
+        color: rgba(255, 255, 255, 0.8)
+        font-size: 18px
+        font-weight: 500
+        line-height: 140%
+        margin-bottom: 40px
+    &__button
+        padding: 12px 32px
+        background-color: #FFFFFF
+        border-radius: 34px
+        border: none
+        margin-bottom: 76px
+        & a 
+            text-decoration: none
+            color: $color-blue
+            font-size: 17px
+            font-weight: 800
+            line-height: 140%
+
+.time-saving__intermediate-level
+    display: flex
+    justify-content: center
+    align-items: center
+    &__index-0
+        position: relative
+        z-index: 0
+    &__index-1
+        position: absolute
+        width: 410px
+        height: 501px
+        z-index: 1
+        left: 336px
+    &__index-2
+        position: absolute
+        z-index: 2
+        left: 695px
+    &__icon-left-3
+        position: absolute
+        z-index: 3
+    &__icon-right-3
+        position: absolute
+        z-index: 3
+        left: 755px
+
+    
