--- a/final/src/css/style.css
+++ b/final/src/css/style.css
@@ -10,7 +10,6 @@
 }
 
 .main-section {
-  position: relative;
   min-height: 846px;
   background-color: #357EFE;
   padding-top: 40px;
@@ -32,6 +31,16 @@
 }
 .main-section__try-for-free {
   margin-bottom: 80px;
+}
+.main-section__reg {
+  position: absolute;
+  width: 2312px;
+  height: 312px;
+  right: -300px;
+  top: 550px;
+  background-color: #FFFFFF;
+  transform: rotate(-7deg);
+  z-index: 0;
 }
 
 .navigation__ul {
@@ -78,25 +87,18 @@
   color: #357EFE;
 }
 
+.computer-logo {
+  position: relative;
+}
 .computer-logo__outside {
   position: relative;
   z-index: 1;
 }
 .computer-logo__inside {
   position: absolute;
-  right: 164px;
-  top: 230px;
-  z-index: 1;
-}
-.computer-logo__reg {
-  position: absolute;
-  bottom: -90px;
-  left: 0px;
-  width: 2312px;
-  height: 312px;
-  background-color: #FFFFFF;
-  transform: rotate(-7deg);
-  z-index: 0;
+  right: 125px;
+  top: 36px;
+  z-index: 2;
 }
 
 .second-section {
@@ -266,6 +268,9 @@
 .third-section {
   background-color: #357EFE;
 }
+.third-section__img {
+  margin-bottom: 64px;
+}
 
 .time-saving__upper-level {
   padding-top: 120px;
@@ -304,22 +309,24 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 .time-saving__intermediate-level__index-0 {
-  position: relative;
   z-index: 0;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 .time-saving__intermediate-level__index-1 {
   position: absolute;
   width: 410px;
   height: 501px;
   z-index: 1;
-  left: 336px;
+  left: 300px;
 }
 .time-saving__intermediate-level__index-2 {
   position: absolute;
   z-index: 2;
-  left: 695px;
+  left: 657px;
 }
 .time-saving__intermediate-level__icon-left-3 {
   position: absolute;
@@ -328,5 +335,123 @@
 .time-saving__intermediate-level__icon-right-3 {
   position: absolute;
   z-index: 3;
-  left: 755px;
+  left: 718px;
+}
+
+.comparison-with-excel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.comparison-with-excel__left-wrapper {
+  margin-right: 24px;
+}
+
+.excel-and-finio:last-child {
+  margin: 0px;
+}
+
+.excel__li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 24px;
+  text-align: left;
+}
+.excel__li__img {
+  margin-right: 10px;
+  height: 20px;
+}
+.excel__li__p {
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 140%;
+}
+
+.finio__li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 24px;
+  text-align: left;
+}
+.finio__li__img {
+  margin-right: 10px;
+  height: 20px;
+}
+.finio__li__p {
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 140%;
+}
+
+.fourth-section {
+  padding-top: 120px;
+}
+
+.advantages-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 78px;
+}
+
+.servers {
+  text-align: left;
+}
+.servers__img {
+  margin-bottom: 24px;
+}
+.servers__h3 {
+  color: rgb(0, 0, 0);
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 120%;
+  margin-bottom: 20px;
+}
+.servers__p {
+  color: rgba(78, 93, 124, 0.5019607843);
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 140%;
+}
+
+.encryption {
+  text-align: left;
+}
+.encryption__img {
+  margin-bottom: 24px;
+}
+.encryption__h3 {
+  color: rgb(0, 0, 0);
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 120%;
+  margin-bottom: 22px;
+}
+.encryption__p {
+  color: rgba(78, 93, 124, 0.5019607843);
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 140%;
+}
+
+.data-protection {
+  text-align: left;
+}
+.data-protection__img {
+  margin-bottom: 24px;
+}
+.data-protection__h3 {
+  color: rgb(0, 0, 0);
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 120%;
+  margin-bottom: 20px;
+}
+.data-protection__p {
+  color: rgba(78, 93, 124, 0.5019607843);
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 140%;
 }/*# sourceMappingURL=style.css.map */
