--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -12,7 +12,6 @@ $color-for-statistics: #4E5D7C80
     margin: 0 auto
 
 .main-section
-    position: relative
     min-height: 846px
     background-color: #357EFE
     padding-top: 40px
@@ -30,6 +29,15 @@ $color-for-statistics: #4E5D7C80
         margin-bottom: 40px
     &__try-for-free
         margin-bottom: 80px
+    &__reg
+        position: absolute
+        width: 2312px
+        height: 312px
+        right: -300px
+        top: 550px
+        background-color: #FFFFFF
+        transform: rotate(-7.00deg)
+        z-index: 0
 
 
 .navigation
@@ -72,23 +80,15 @@ $color-for-statistics: #4E5D7C80
             color: $color-blue
 
 .computer-logo
+    position: relative
     &__outside
         position: relative
         z-index: 1
     &__inside
         position: absolute
-        right: 164px
-        top: 230px
-        z-index: 1
-    &__reg
-        position: absolute
-        bottom: -90px
-        left: 0px
-        width: 2312px
-        height: 312px
-        background-color: #FFFFFF
-        transform: rotate(-7.00deg)
-        z-index: 0
+        right: 125px
+        top: 36px
+        z-index: 2
 
 .second-section
     background-color: #FFFFFF
@@ -226,6 +226,9 @@ $color-for-statistics: #4E5D7C80
 
 .third-section
     background-color: $color-blue
+    &__img
+        margin-bottom: 64px
+        
 
 .time-saving__upper-level
     padding-top: 120px 
@@ -259,25 +262,122 @@ $color-for-statistics: #4E5D7C80
     display: flex
     justify-content: center
     align-items: center
+    position: relative
     &__index-0
-        position: relative
         z-index: 0
+        border-bottom-left-radius: 10px
+        border-bottom-right-radius: 10px
     &__index-1
         position: absolute
         width: 410px
         height: 501px
         z-index: 1
-        left: 336px
+        left: 300px
     &__index-2
         position: absolute
         z-index: 2
-        left: 695px
+        left: 657px
     &__icon-left-3
         position: absolute
         z-index: 3
     &__icon-right-3
         position: absolute
         z-index: 3
-        left: 755px
+        left: 718px
 
+.comparison-with-excel
+    display: flex
+    justify-content: center
+    align-items: center
+    &__left-wrapper
+        margin-right: 24px
     
+.excel-and-finio
+    &:last-child
+        margin: 0px
+
+.excel__li
+    display: flex
+    align-items: center
+    margin-bottom: 24px
+    text-align: left
+    &__img
+        margin-right: 10px
+        height: 20px
+    &__p
+        color: rgba(255, 255, 255, 0.8)
+        font-size: 18px
+        font-weight: 500
+        line-height: 140%
+    
+.finio__li
+    display: flex
+    align-items: center
+    margin-bottom: 24px
+    text-align: left
+    &__img
+        margin-right: 10px
+        height: 20px
+    &__p
+        color: rgba(255, 255, 255, 0.8)
+        font-size: 18px
+        font-weight: 500
+        line-height: 140%
+
+
+.fourth-section
+    padding-top: 120px
+
+.advantages-flex
+    display: flex
+    justify-content: center
+    align-items: center
+    gap: 78px
+
+.servers
+    text-align: left
+    &__img
+        margin-bottom: 24px
+    &__h3
+        color: rgb(0, 0, 0)
+        font-size: 32px
+        font-weight: 600
+        line-height: 120%
+        margin-bottom: 20px
+    &__p
+        color: $color-for-statistics
+        font-size: 17px
+        font-weight: 500
+        line-height: 140%
+        
+.encryption
+    text-align: left
+    &__img
+        margin-bottom: 24px
+    &__h3
+        color: rgb(0, 0, 0)
+        font-size: 32px
+        font-weight: 600
+        line-height: 120%
+        margin-bottom: 22px
+    &__p
+        color: $color-for-statistics
+        font-size: 17px
+        font-weight: 500
+        line-height: 140%
+
+.data-protection
+    text-align: left
+    &__img
+        margin-bottom: 24px
+    &__h3
+        color: rgb(0, 0, 0)
+        font-size: 32px
+        font-weight: 600
+        line-height: 120%
+        margin-bottom: 20px
+    &__p
+        color: $color-for-statistics
+        font-size: 17px
+        font-weight: 500
+        line-height: 140%
