--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -327,6 +327,7 @@ $color-for-statistics: #4E5D7C80
 
 .fourth-section
     padding-top: 120px
+    margin-bottom: 80px 
 
 .advantages-flex
     display: flex
@@ -381,3 +382,74 @@ $color-for-statistics: #4E5D7C80
         font-size: 17px
         font-weight: 500
         line-height: 140%
+
+.fifth-section
+    margin-bottom: 120px
+.mobile-version
+    text-align: center
+    &__h3
+        color: rgb(0, 0, 0)
+        font-size: 48px
+        font-weight: 600
+        line-height: 120%
+        margin-bottom: 24px
+    &__p
+        color: $color-for-statistics
+        font-size: 17px
+        font-weight: 500
+        line-height: 140%
+        margin-bottom: 40px
+
+.around-advantages-and-mobile-version__hr
+    margin: 0 auto
+    margin-bottom: 80px
+    text-align: center
+    width: 1392px
+
+.sixth-section
+    &__container
+        background-color: $color-blue
+        border-radius: 16px
+
+.customer-support
+    display: flex
+    justify-content: center
+    align-items: center
+    gap: 74px
+    &__right-wrapper
+        text-align: left
+        &__h3
+            color: rgb(255, 255, 255)
+            font-size: 40px
+            font-weight: 600
+            line-height: 120%
+            margin-bottom: 24px
+        &__p
+            color: rgba(255, 255, 255, 0.8)
+            font-size: 17px
+            font-weight: 500
+            line-height: 140%
+            margin-bottom: 44px
+        &__icons-and-links
+            margin-bottom: 40px
+        &__footer-p
+            color: rgba(255, 255, 255, 0.8)
+            font-size: 17px
+            font-weight: 500
+            line-height: 140%
+            
+.icons-and-links__li
+    display: flex
+    align-items: center
+    margin-bottom: 16px
+    &:last-child
+        margin: 0px
+    &-img
+        margin-right: 16px
+    &-p 
+        color: rgb(255, 255, 255)
+        font-size: 17px
+        font-weight: 500
+        line-height: 140%
+
+
