--- a/final/src/css/style.css
+++ b/final/src/css/style.css
@@ -102,7 +102,7 @@
 .computer-logo {
   position: relative;
 }
-.computer-logo__outside {
+.computer-logo__outsideœ {
   position: relative;
   z-index: 1;
 }
