--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -105,6 +105,8 @@ $color-for-statistics: #4E5D7C80
         margin-bottom: 80px
         &:last-child
             margin: 0px
+    &__basic-statistics
+        margin-bottom: 120px
 /* значения для footer первой секции (flex-сы) */
 .functions__flex
     display: flex
@@ -127,7 +129,7 @@ $color-for-statistics: #4E5D7C80
 .functions_items
         font-size: 24px
         font-weight: 700
-
+/* значения для первой колонки в second-section__basic-statistics (кассовые разрывы) */
 .cash-gaps
     display: flex
     justify-content: center
@@ -150,7 +152,7 @@ $color-for-statistics: #4E5D7C80
     &__right
         &__img
             width: 729px
-
+/* значения для второй колонки в second-section__basic-statistics (Отчеты о прибыли и убытках) */
 .reports
     display: flex
     justify-content: center
@@ -174,7 +176,7 @@ $color-for-statistics: #4E5D7C80
             color: $color-for-statistics
             width: 565px
             line-height: 140%
-
+/* значение третьей колонки в second-section__basic-statistics (товары и прибыль) */
 .profit
     display: flex
     justify-content: center
@@ -195,7 +197,7 @@ $color-for-statistics: #4E5D7C80
             color: $color-for-statistics
             width: 526px
             line-height: 140%
-
+/* значение четвертой колонки в second-section__basic-statistics (про сокращение расходов) */
 .expenses
     display: flex
     justify-content: center
@@ -226,17 +228,19 @@ $color-for-statistics: #4E5D7C80
             width: 566px
             line-height: 140%
 
+/* разделительная линия между колонками в basic-statistics */
 .basic-statistics__hr
     margin: 0px
     margin-bottom: 80px
     color: $color-for-statistics
 
+/* общие значения для третьей секции */ 
 .third-section
     background-color: $color-blue
     &__img
         margin-bottom: 64px
         
-
+/* значения для верхнего third-section__time-saving (h3, p, button) */
 .time-saving__upper-level
     padding-top: 120px 
     text-align: center
@@ -265,6 +269,7 @@ $color-for-statistics: #4E5D7C80
             font-weight: 800
             line-height: 140%
 
+/* значения для среднего уровня third-section__time-saving (накладывание фото друг на друга) */
 .time-saving__intermediate-level
     display: flex
     justify-content: center
@@ -292,17 +297,20 @@ $color-for-statistics: #4E5D7C80
         z-index: 3
         left: 718px
 
+/* значения для third-section__time-saving (flex) */
 .comparison-with-excel
     display: flex
     justify-content: center
     align-items: center
     &__left-wrapper
         margin-right: 24px
-    
+
+/* является "родителем" по отношению к excel__li */ 
 .excel-and-finio
     &:last-child
         margin: 0px
 
+/* является "дочерней" по отношению к excel-and-finio */
 .excel__li
     display: flex
     align-items: center
@@ -316,7 +324,8 @@ $color-for-statistics: #4E5D7C80
         font-size: 18px
         font-weight: 500
         line-height: 140%
-    
+
+/* является "дочерней" по отношению к excel-and-finio */   
 .finio__li
     display: flex
     align-items: center
@@ -331,16 +340,18 @@ $color-for-statistics: #4E5D7C80
         font-weight: 500
         line-height: 140%
 
-
+/* Общее значение для четвертой секции */ 
 .fourth-section
     padding-top: 120px
 
+/* является "родителем" по отношению к advantages-flex__servers servers, advantages-flex__encryption encryption и advantages-flex__data-protection */
 .advantages-flex
     display: flex
     justify-content: center
     align-items: center
     gap: 78px
 
+/* является "дочерней" по отношению к advantages-flex */
 .servers
     text-align: left
     &__img
@@ -356,7 +367,8 @@ $color-for-statistics: #4E5D7C80
         font-size: 17px
         font-weight: 500
         line-height: 140%
-        
+
+/* является "дочерней" по отношению к advantages-flex */  
 .encryption
     text-align: left
     &__img
@@ -373,6 +385,7 @@ $color-for-statistics: #4E5D7C80
         font-weight: 500
         line-height: 140%
 
+/* является "дочерней" по отношению к advantages-flex */
 .data-protection
     text-align: left
     &__img
