--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -1,7 +1,8 @@
 /* задали цвета, которые используются слишком часто */
 $color-blue: #357EFE
 $color-for-statistics: #4E5D7C80
-
+$color-for-subscriptions: #1ABC9C 
+$color-for-background-calculation: #FFC736
 /* задал общие значения для сайта, шрифт и как должны позиционироваться блоки на сайте */
 *
     box-sizing: border-box
@@ -472,3 +473,118 @@ $color-for-statistics: #4E5D7C80
         line-height: 140%
 
 
+.seventh-section
+
+.tariffs
+    &__title
+        text-align: center
+        margin-bottom: 40px
+    &__buttons-blue
+        padding: 12px 63px
+        border-radius: 47px
+        background-color: $color-blue
+        border: none
+        & a 
+            color: #FFFFFF
+            text-decoration: none
+            font-size: 17px
+            font-weight: 800
+            line-height: 140%
+        &__h3
+            color: rgb(0, 0, 0)
+            font-size: 48px
+            font-weight: 600
+            line-height: 120%
+            margin-bottom: 24px
+        &__p
+            color: $color-for-statistics
+            font-size: 17px
+            font-weight: 500
+            line-height: 140%
+
+.subscriptions
+    display: grid
+    grid-template-columns: repeat(3, 1fr)
+    align-items: center
+    column-gap: 24px
+    &__items
+        text-align: left
+        &__h3
+            color: rgb(0, 0, 0)
+            font-size: 32px
+            font-weight: 800
+            line-height: 120%
+            margin-bottom: 16px
+        &__p
+            color: $color-for-statistics
+            font-size: 17px
+            font-weight: 500
+            line-height: 140%
+        &__calculation
+            display: flex
+            align-items: center
+            margin-bottom: 16px
+            &__p
+                color: #4E5D7C
+                font-size: 17px
+                font-weight: 500
+                line-height: 120%
+
+.calculation_background
+    padding: 8px 16px
+    background-color: $color-for-background-calculation 
+
+.subscriptions-benefit
+    display: inline-block
+    background-color: $color-for-subscriptions
+    color: #FFFFFF
+    padding: 4px 16px
+    border-radius: 8px
+    border: none
+    margin-bottom: 16px
+
+.subscriptions_padding_first
+    margin: 93px 40px 48px
+.subscriptions_padding_second
+    margin: 48px 40px
+
+.subscriptions_p-32
+    margin-bottom: 32px
+.subscriptions_p-50
+    margin-bottom: 50px
+
+.calculation_last
+    margin: 0px
+    margin-bottom: 40px
+
+.calculation_margin28px
+    margin-right: 28px
+.calculation_margin72px
+    margin-right: 72px
+.calculation_margin20px
+    margin-right: 20px
+
+.calculation_margin27px
+    margin-right: 27px
+.calculation_margin55px
+    margin-right: 55px
+.calculation_margin19px
+    margin-right: 19px
+
+.calculation_margin40px
+    margin-right: 40px
+.calculation_margin67px
+    margin-right: 67px
+.calculation_margin32px
+    margin-right: 32px
+
+.calculation__h3
+    color: #4E5D7C14
+    width: 289px
+    margin: 0px
+    margin-bottom: 16px
+.calculation__h3__for-calculation_background
+    color: #4E5D7C14
+    width: 289px
+    margin: 0px
+    margin-bottom: 8px
