--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -627,3 +627,44 @@ $color-for-background-calculation: #FFC736
     margin-bottom: 8px
 
     
+.eighth-section
+    &__container
+        overflow: hidden
+
+.reviews
+    
+    &__top-h2
+        text-align: center
+        color: rgb(0, 0, 0)
+        font-size: 48px
+        font-weight: 600
+        line-height: 120%
+        margin-bottom: 40px
+    &-flex
+        display: flex
+        justify-content: center
+        align-items: center
+        &__left-wrapper
+            padding: 120px 20px 113px 104px
+            width: 1159px
+
+    &-left
+        text-align: left
+        background-color: $color-blue
+        &__h3
+            color: rgb(255, 255, 255)
+            font-size: 28px
+            font-weight: 700
+            line-height: 140%
+            margin-bottom: 64px
+        &__p
+            color: rgb(255, 255, 255)
+            font-size: 17px
+            font-weight: 700
+            line-height: 140%
+    &-right
+        position: relative
+        &__img
+            position: absolute
+            right: 1px
+            top: -231px
